--- a/404.html
+++ b/404.html
@@ -14,25 +14,25 @@ permalink: /404.html
 <meta name="robots" content="noindex, nofollow, noarchive">
 <!-- Meta data-->
 <!--[if gte IE 9 | !IE ]><!-->
-<link href="{{ site.baseurl }}/wet-boew/assets/favicon.ico" rel="icon" type="image/x-icon">
-<link rel="stylesheet" href="{{ site.baseurl }}/wet-boew/css/theme-srv.min.css">
+<link href="{{ site.wet_cdts_hosturl }}/{{ site.wet_cdts_version }}/assets/favicon.ico" rel="icon" type="image/x-icon">
+<link rel="stylesheet" href="{{ site.wet_cdts_hosturl }}/{{ site.wet_cdts_version }}/css/theme-srv.min.css">
 <!--<![endif]-->
 <!--[if lt IE 9]>
-		<link href="{{ site.baseurl }}/wet-boew/assets/favicon.ico" rel="shortcut icon" />
-		<link rel="stylesheet" href="{{ site.baseurl }}/wet-boew/css/ie8-theme-srv.min.css" />
-		<script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.0/jquery.js"></script>
-		<script src="{{ site.baseurl }}/wet-boew/js/ie8-wet-boew.min.js"></script>
+		<link href="{{ site.wet_cdts_hosturl }}/{{ site.wet_cdts_version }}/assets/favicon.ico" rel="shortcut icon" />
+		<link rel="stylesheet" href="{{ site.wet_cdts_hosturl }}/{{ site.wet_cdts_version }}w/css/ie8-theme-srv.min.css" />
+		<script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.js"></script>
+		<script src="{{ site.wet_cdts_hosturl }}/{{ site.wet_cdts_version }}/js/ie8-wet-boew.min.js"></script>
 		<![endif]-->
-<noscript><link rel="stylesheet" href="{{ site.baseurl }}/wet-boew/css/noscript.min.css" /></noscript>
+<noscript><link rel="stylesheet" href="{{ site.wet_cdts_hosturl }}/{{ site.wet_cdts_version }}/css/noscript.min.css" /></noscript>
 </head>
 <body vocab="http://schema.org/" typeof="WebPage">
 <header role="banner" id="wb-bnr" class="container">
 <div class="row">
 <div class="col-sm-6">
-<object id="gcwu-sig" type="image/svg+xml" tabindex="-1" role="img" data="{{ site.baseurl }}/wet-boew/assets/sig-blk-en.svg" aria-label="Government of Canada / Gouvernement du Canada"></object>
+<object id="gcwu-sig" type="image/svg+xml" tabindex="-1" role="img" data="{{ site.wet_cdts_hosturl }}/{{ site.wet_cdts_version }}/assets/sig-blk-en.svg" aria-label="Government of Canada / Gouvernement du Canada"></object>
 </div>
 <div class="col-sm-6">
-<object id="wmms" type="image/svg+xml" tabindex="-1" role="img" data="{{ site.baseurl }}/wet-boew/assets/wmms-blk.svg" aria-label="Symbol of the Government of Canada"></object>
+<object id="wmms" type="image/svg+xml" tabindex="-1" role="img" data="{{ site.wet_cdts_hosturl }}/{{ site.wet_cdts_version }}/assets/wmms-blk.svg" aria-label="Symbol of the Government of Canada"></object>
 </div>
 </div>
 </header>
@@ -43,26 +43,26 @@ permalink: /404.html
 <h2><span class="glyphicon glyphicon-warning-sign mrgn-rght-md"></span> We couldn't find that Web page (Error 404)</h2>
 <p>We're sorry you ended up here. Sometimes a page gets moved or deleted, but hopefully we can help you find what you're looking for.</p>
 <ul>
-<li>Return to the <a href="/">home page</a></li>
+<li>Return to the <a href="{{ site.baseurl }}/">home page</a></li>
 </ul>
 </section>
 <section class="col-md-6" lang="fr">
 <h2><span class="glyphicon glyphicon-warning-sign mrgn-rght-md"></span> Nous ne pouvons trouver cette page Web (Erreur 404)</h2>
 <p>Nous sommes désolés que vous ayez abouti ici. Il arrive parfois qu'une page ait été déplacée ou supprimée. Heureusement, nous pouvons vous aider à trouver ce que vous cherchez.</p>
 <ul>
-<li>Retournez à la <a href="/accueil.html">page d'accueil</a></li>
+<li>Retournez à la <a href="{{ site.baseurl }}/accueil.html">page d'accueil</a></li>
 </ul>
 </section>
 </div>
 </main>
 <!--[if gte IE 9 | !IE ]><!-->
-<script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.4/jquery.js"></script>
-<script src="{{ site.baseurl }}/wet-boew/js/wet-boew.min.js"></script>
+<script src="https://ajax.googleapis.com/ajax/libs/jquery/2.2.4/jquery.js"></script>
+<script src="{{ site.wet_cdts_hosturl }}/{{ site.wet_cdts_version }}/js/wet-boew.min.js"></script>
 <!--<![endif]-->
 <!--[if lt IE 9]>
-		<script src="{{ site.baseurl }}/wet-boew/js/ie8-wet-boew2.min.js"></script>
+		<script src="{{ site.wet_cdts_hosturl }}/{{ site.wet_cdts_version }}/js/ie8-wet-boew2.min.js"></script>
 		
 		<![endif]-->
-<script src="{{ site.baseurl }}/wet-boew/js/theme.min.js"></script>
+<script src="{{ site.wet_cdts_hosturl }}/{{ site.wet_cdts_version }}/js/theme.min.js"></script>
 </body>
 </html>
