--- a/draft-research/cra-contact-us-research-summary.html
+++ b/draft-research/cra-contact-us-research-summary.html
@@ -92,10 +92,11 @@ main p, main li, main blockquote {
 
 	<p>As well as measuring task success rates, the team analyzed user behaviour by watching videos of the tests. This let us see where people struggled. One of the big challenges we identified was that people sometimes failed to get to the Telephone numbers page. They first had to click on the Telephone enquiries link and then go through an overlay where they had to select the type of enquiry. If they did get to the Telephone numbers page, they often chose the wrong phone number from the long list.</p>
 
-
+<figure>
 	<img class="img-responsive" alt="Telephone number overlay" src="../images/cra-contact-us/telephone-overlay.png"/>
-
+<figcaption>Screenshot of the overlay users are presented with when they click on the Telephone enquiries link.</figcaption>
 <h2>Redesigning to help users find the right phone number</h2>
+</figure>
 
 	<p>Using the results from the baseline testing, the team designed a prototype to address the problems. We focused on the following key design challenges. </p>
 
@@ -126,7 +127,7 @@ main p, main li, main blockquote {
 
 <p>Overall task performance went up from 40% success to 85% when we retested the task scenarios on the prototype. </p>
 
-<p>This chart shows the baseline measurement at the start of the project compared with the validation measurement on the prototype redesigned by project team</p>
+<p>This chart shows a comparison of task success rates between the baseline and validation tests for all participants.</p>
 
 <img class="img-responsive hidden-sm hidden-xs" alt="See table that follows for data." src="../images/cra-contact-us/cra-contact-us-task-success-chart.png"/>
 
@@ -169,7 +170,7 @@ main p, main li, main blockquote {
 			<td>83%</td>
 		</tr>
 		<tr><td>Corporate - Payment arrangements</td>
-			<td>12%</td>
+			<td>28%</td>
 			<td>83%</td>
 		</tr>
 		<tr><td>Report a scam - Anti-fraud</td>
@@ -224,7 +225,7 @@ main p, main li, main blockquote {
 <ul>
 
 <li>Read our blog post: <a href="#">Content design tips from our Travel advice and advisories and Contact the CRA optimization projects</a></li>
-<li><a href="https://blog.canada.ca/pages/project-overview.html#projects">Read overviews of other projects</a> with our partners</li>
+<li>Read overviews of other <a href="https://blog.canada.ca/pages/project-overview.html#projects">projects with our partners</a></li>
 
 </ul>
 
