--- a/draft-research/arc-contactez-nous-resume-recherche.html
+++ b/draft-research/arc-contactez-nous-resume-recherche.html
@@ -89,15 +89,17 @@ h2 {
 
 <h2>Établissement d’une référence</h2>
 
-<p>Les normes numériques du gouvernement du Canada commencent avec «&nbsp;conception avec les utilisateurs&nbsp;». Cette façon de faire met l’accent sur la recherche et la mise à l’essai auprès des utilisateurs, ce que le <abbr title="Bureau de la transformation numérique">BTN</abbr> fait depuis le début. Notre processus est centré sur un test de référence pour mesurer le degré de réussite des utilisateurs avec les scénarios de tâches principales de la conception actuelle. Nous voulons cerner les problèmes qui les empêchent de réussir. Comme nous voulions mettre à l’essai des scénarios de tâches tant pour les particuliers que pour les entreprises, nous avons recruté des propriétaires de petites entreprises canadiennes comme participants aux séances de recherche. Les propriétaires d’entreprise connaissent bien les défis commerciaux et doivent aussi faire leur déclaration de revenus des particuliers.</p>
+<p>Les <a href="https://www.canada.ca/fr/gouvernement/systeme/gouvernement-numerique/normes-numeriques-gouvernement-canada.html">normes numériques du gouvernement du Canada</a> commencent avec «&nbsp;conception avec les utilisateurs&nbsp;». Cette façon de faire met l’accent sur la recherche et la mise à l’essai auprès des utilisateurs, ce que le <abbr title="Bureau de la transformation numérique">BTN</abbr> fait depuis le début. Notre processus est centré sur un test de référence pour mesurer le degré de réussite des utilisateurs avec les scénarios de tâches principales de la conception actuelle. Nous voulons cerner les problèmes qui les empêchent de réussir. Comme nous voulions mettre à l’essai des scénarios de tâches tant pour les particuliers que pour les entreprises, nous avons recruté des propriétaires de petites entreprises canadiennes comme participants aux séances de recherche. Les propriétaires d’entreprise connaissent bien les défis commerciaux et doivent aussi faire leur déclaration de revenus des particuliers.</p>
 
 <p>Nos participants reflétaient l’éventail des compétences numériques chez les propriétaires d’entreprises canadiennes. Quelques participants qui travaillent surtout sur le terrain avec leurs clients ne savaient pas comment copier/coller du texte d’une page Web à une autre. D’autres étaient des utilisateurs en ligne experts qui gèrent leur propre site Web. </p>
 
 <p>En plus de mesurer les taux de réussite des tâches, l’équipe a analysé le comportement des utilisateurs en regardant des vidéos des tests. Cela nous a permis de voir où les utilisateurs ont éprouvé des difficultés. L’une des grandes difficultés que nous avons observées était que les utilisateurs n’arrivaient pas toujours à accéder à la page des numéros de téléphone. Ils devaient d’abord cliquer sur le lien Demandes de renseignements par téléphone, puis accéder à une fenêtre superposée dans laquelle ils devaient sélectionner le type de demande de renseignements. Lorsqu’ils réussissaient à atteindre la page des numéros de téléphone, ils sélectionnaient souvent le mauvais numéro de téléphone à partir de la longue liste.
 </p>
 
+<figure>
 <img class="img-responsive" alt="Fenêtre superposée du numéro de téléphone." src="../images/arc-contactez-nous/fenetre-superposee.png"/>
-
+<figcaption>Une capture d'écran de la fenêtre superposée qui s'affiche lorsque les utilisateurs cliquent sur le lien Demandes de renseignements par téléphone.</figcaption>
+</figure>
 
 <h2>Refonte de la conception visant à aider les utilisateurs à trouver le bon numéro de téléphone</h2>
 
@@ -159,7 +161,7 @@ h2 {
 	 </tr><tr><td>Avis de cotisation (ADC) - Ligne des demandes de renseignements sur l'impôt des particuliers</td>
 		 <td>36 %</td>
 		 <td>82 %</td>
-	 </tr><tr><td>ADC par l’intermédiaire de Mon dossier</td>
+	 </tr><tr><td><abbr title="Avis de cotisation">ADC</abbr> par l’intermédiaire de Mon dossier</td>
 		 <td>73 %</td>
 		 <td>93 %</td>
 		 <tr><td>Allocation canadienne pour enfants - Ligne des prestations</td>
@@ -176,12 +178,12 @@ h2 {
 		 <td>83 %</td>
 	 </tr>
 	 <tr><td>Entreprise - Ententes de paiement</td>
-		 <td>12 %</td>
+		 <td>28 %</td>
 		 <td>83 %</td>
 	 </tr>
 	 <tr><td>Signaler une arnaque - Lutte contre la fraude</td>
 		 <td>67 %</td>
-		 <td>10 0%</td>
+		 <td>100 %</td>
 	 </tr>
 	 <tr><td>Address du formulaire T2062 - Surrey King George</td>
 		 <td>22 %</td>
@@ -227,7 +229,7 @@ h2 {
 
 <ul>
 <li>Lisez notre billet de blogue&nbsp;:&nbsp;<a href="#">Conseils de conception de contenu tirés de nos projets d’optimisation du contenu «&nbsp;Conseils aux voyageurs et avertissements&nbsp;» et «&nbsp;Communiquer avec l’ARC&nbsp;»</a></li>
-<li><a href="https://blogue.canada.ca/pages/apercu-projet.html#projets">Consultez les aperçus de nos autres projets</a> avec nos partenaires</li>
+<li>Consultez les aperçus de nos autres <a href="https://blogue.canada.ca/pages/apercu-projet.html#projets">projets avec nos partenaires</a> </li>
 </ul>
 
 
