update footer link

--- a/draft-research/conseils-voyageurs-resume-recherche.html
+++ b/draft-research/conseils-voyageurs-resume-recherche.html
@@ -222,7 +222,7 @@ Voici quelques-unes de ces mesures&nbsp;:</p>
 
 <ul>
 	<li>Lisez notre billet de blogue&nbsp;:&nbsp;<a href="#">Conseils de conception de contenu tirés de nos projets d’optimisation du contenu «&nbsp;Conseils aux voyageurs et avertissements&nbsp;» et «&nbsp;Communiquer avec l’ARC&nbsp;»</a></li>
-<li><a href="https://blogue.canada.ca/pages/apercu-projet.html#projets">Consultez les aperçus de nos autres projets</a> avec nos partenaires</li>
+<li>Consultez les aperçus de nos autres <a href="https://blogue.canada.ca/pages/apercu-projet.html#projets">projets avec nos partenaires</a></li>
 </ul>
 
 
