--- a/draft-research/travel-advice-research-summary.html
+++ b/draft-research/travel-advice-research-summary.html
@@ -222,7 +222,7 @@ main p, main li, main blockquote {
 <ul>
 
 <li>Read our blog post: <a href="#">Content design tips from our Travel advice and advisories and Contact the CRA optimization projects</a></li>
-<li><a href="https://blog.canada.ca/pages/project-overview.html#projects">Read overviews of other projects</a> with our partners</li>
+<li>>Read overviews of other <a href="https://blog.canada.ca/pages/project-overview.html#projects">projects with our partners</a></li>
 
 </ul>
 
