capitalization in final list

--- a/draft-research/travel-advice-research-summary.html
+++ b/draft-research/travel-advice-research-summary.html
@@ -203,9 +203,9 @@ main p, main li, main blockquote {
 
 <p>The features of the prototype that had the biggest impact on success rates were:</p>
 <ul>
-	<li>Headings that are simple, informative and task-oriented: “Planning your trip,” “Before you go,” “When things go wrong”</li>
-	<li>A page design for destinations where critical information stands out, supporting details are relevant, and additional detail is linked to instead of duplicated</li>
-	<li>Content pages that are scannable, with clear and plentiful headings, bulleted lists, and only essential links</li>
+	<li>headings that are simple, informative and task-oriented: “Planning your trip,” “Before you go,” “When things go wrong”</li>
+	<li>a page design for destinations where critical information stands out, supporting details are relevant, and additional detail is linked to instead of duplicated</li>
+	<li>content pages that are scannable, with clear and plentiful headings, bulleted lists, and only essential links</li>
 </ul>
 <div class="clearfix"></div>
 <h2>Request the research</h2>
