list format for style guide

--- a/draft-research/conseils-voyageurs-resume-recherche.html
+++ b/draft-research/conseils-voyageurs-resume-recherche.html
@@ -110,14 +110,14 @@ h2 {
 	</li>
 	<li>«&nbsp;se sentir satisfait&nbsp;» en répondant à la question de la tâche avec de l’information qui semblait assez proche d’une réponse, même si elle était incomplète ou inexacte;
 	</li>
-	<li>ne pas trouver de réponses publiées sous une rubrique où les gens ne pensaient pas à chercher
+	<li>ne pas trouver de réponses publiées sous une rubrique où les gens ne pensaient pas à chercher;
 (par exemple, des conseils sur les médicaments illégaux placés dans «&nbsp;Lois et culture&nbsp;», mais non dans «&nbsp;Santé&nbsp;»)
 	</li>
 	<li>des rubriques qui ont agi comme des «&nbsp;aimants nocifs&nbsp;», suggérant un contenu qui n’a pas fourni la réponse;
 (par exemple : une requête du type «&nbsp;Comment nous aidons&nbsp;», qui mène à des profils d’agents consulaires plutôt qu’à des renseignements sur les services offerts aux voyageurs canadiens)
 </li>
-	<li>des longues pages de texte dense qui ne permettent pas un survol, ce qui fait qu’il est facile de manquer des détails cruciaux</li>
-	<li>des tâches exigeant des connaissances préalables, comme savoir que Londres, en Angleterre, se trouve au Royaume-Uni</li>
+	<li>des longues pages de texte dense qui ne permettent pas un survol, ce qui fait qu’il est facile de manquer des détails cruciaux;</li>
+	<li>des tâches exigeant des connaissances préalables, comme savoir que Londres, en Angleterre, se trouve au Royaume-Uni.</li>
 </ul>
 
 <h2>Conception en vue de la réussite des utilisateurs</h2>
@@ -126,16 +126,16 @@ h2 {
 Voici quelques-unes de ces mesures&nbsp;:</p>
 
 <ul>
-		<li>une architecture d’information de voyage révisée, comportant moins de sujets et plus de libellés axés sur les tâches pour améliorer l’aspect de l’information; (Par exemple, «&nbsp;Planifier votre voyage&nbsp;» au lieu de «&nbsp;Voyager à l’étranger&nbsp;»)</li>
+		<li>une architecture d’information de voyage révisée, comportant moins de sujets et plus de libellés axés sur les tâches pour améliorer l’aspect de l’information; (par exemple, «&nbsp;Planifier votre voyage&nbsp;» au lieu de «&nbsp;Voyager à l’étranger&nbsp;»)</li>
 		<li>une relation plus uniforme entre les libellés de sujet parents et leurs sous-sujets;</li>
-		<li>une approche de type «&nbsp;filet de sécurité&nbsp;» pour la conception du contenu (par exemple, les renseignements sur les médicaments illégaux — qui peuvent mener à l’arrestation et à l’emprisonnement dans certains pays — sont mis en évidence comme un «&nbsp;point important&nbsp;» décrit en détail dans «&nbsp;Lois et culture&nbsp;» et fait l’objet de renvois dans «&nbsp;Santé > Médicaments&nbsp;»)</li>
-		<li>Des pages faciles à lire et à survoler sur des sujets critiques et des situations courantes nécessitant de l’aide;</li>
-		<li>de nombreux en-têtes, listes à puces et liens de navigation «&nbsp;sur cette page&nbsp;»</li>
-		<li>une conversion de l’extrêmement utile liste de vérification de voyage d’une publication (souvent manquée par les participants) à une page Web bien en vue</li>
-		<li>un répertoire de destination révisé mettant en évidence les destinations à risque élevé; (celles arborant des avertissements «&nbsp;ne pas voyager&nbsp;» ou «&nbsp;éviter les voyages non essentiels&nbsp;»</li>
-		<li>une fonction de recherche de destination révisée qui permet la recherche par d’autres noms de lieux</li>
-		<li>un modèle de page reconçu pour les destinations, remplaçant la page à plusieurs onglets par une seule page avec des liens de navigation «&nbsp;sur cette page&nbsp;»</li>
-		<li>les coordonnées et les renseignements sur les services propres à la destination placés plus en évidence sur les pages des destinations</li>
+		<li>une approche de type «&nbsp;filet de sécurité&nbsp;» pour la conception du contenu; (par exemple, les renseignements sur les médicaments illégaux — qui peuvent mener à l’arrestation et à l’emprisonnement dans certains pays — sont mis en évidence comme un «&nbsp;point important&nbsp;» décrit en détail dans «&nbsp;Lois et culture&nbsp;» et fait l’objet de renvois dans «&nbsp;Santé > Médicaments&nbsp;»)</li>
+		<li>des pages faciles à lire et à survoler sur des sujets critiques et des situations courantes nécessitant de l’aide;</li>
+		<li>de nombreux en-têtes, listes à puces et liens de navigation «&nbsp;sur cette page&nbsp;»;</li>
+		<li>une conversion de l’extrêmement utile liste de vérification de voyage d’une publication (souvent manquée par les participants) à une page Web bien en vue;</li>
+		<li>un répertoire de destination révisé mettant en évidence les destinations à risque élevé; (celles arborant des avertissements «&nbsp;ne pas voyager&nbsp;» ou «&nbsp;éviter les voyages non essentiels&nbsp;»;</li>
+		<li>une fonction de recherche de destination révisée qui permet la recherche par d’autres noms de lieux;</li>
+		<li>un modèle de page reconçu pour les destinations, remplaçant la page à plusieurs onglets par une seule page avec des liens de navigation «&nbsp;sur cette page&nbsp;»;</li>
+		<li>les coordonnées et les renseignements sur les services propres à la destination placés plus en évidence sur les pages des destinations.</li>
 </ul>
 
 
@@ -204,9 +204,9 @@ Voici quelques-unes de ces mesures&nbsp;:</p>
 <p>Voici les caractéristiques du prototype qui ont eu la plus grande incidence sur les taux de réussite&nbsp;:</p>
 
 <ul>
-<li>Rubriques simples, informatives et axées sur les tâches&nbsp;: «&nbsp;Planifier votre voyage&nbsp;», «&nbsp;Avant de partir&nbsp;», «&nbsp;Lorsque les choses tournent mal&nbsp;»</li>
-<li>Une conception de page pour les destinations où les renseignements essentiels se démarquent, où les détails à l’appui sont pertinents et où des détails supplémentaires sont liés au lieu d’être reproduits</li>
-<li>Des pages de contenu faciles à survoler, avec des rubriques claires et nombreuses, des listes à puces et seulement des liens essentiels</li>
+<li>des rubriques simples, informatives et axées sur les tâches&nbsp;: «&nbsp;Planifier votre voyage&nbsp;», «&nbsp;Avant de partir&nbsp;», «&nbsp;Lorsque les choses tournent mal&nbsp;»;</li>
+<li>une conception de page pour les destinations où les renseignements essentiels se démarquent, où les détails à l’appui sont pertinents et où des détails supplémentaires sont liés au lieu d’être reproduits;</li>
+<li>des pages de contenu faciles à survoler, avec des rubriques claires et nombreuses, des listes à puces et seulement des liens essentiels.</li>
 </ul>
 
 <div class="clearfix"></div>
