fixed 'date modified'

--- a/draft-research/conseils-voyageurs-resume-recherche.html
+++ b/draft-research/conseils-voyageurs-resume-recherche.html
@@ -232,7 +232,7 @@ Voici quelques-unes de ces mesures&nbsp;:</p>
 <script type="text/javascript">
 	var defPreFooter = document.getElementById("def-preFooter");
 	defPreFooter.outerHTML = wet.builder.preFooter({
-		dateModified: "le 23 octobre 2019",
+		dateModified: "le 1er novembre 2019",
 		showPostContent: true,
 		showFeedback: true,
 		showShare: true
