--- a/draft-research/travel-advice-research-summary.html
+++ b/draft-research/travel-advice-research-summary.html
@@ -219,6 +219,7 @@ main p, main li, main blockquote {
 
 <h2>Explore further</h2>
 
+
 <ul>
 
 <li>Read our blog post: <a href="#">Content design tips from our Travel advice and advisories and Contact the CRA optimization projects</a></li>
@@ -233,7 +234,7 @@ main p, main li, main blockquote {
 <script type="text/javascript">
 	var defPreFooter = document.getElementById("def-preFooter");
 	defPreFooter.outerHTML = wet.builder.preFooter({
-		dateModified: "October 23, 2019",
+		dateModified: "November 1st, 2019",
 		showPostContent: true,
 		showFeedback: true,
 		showShare: true
