--- a/draft-research/recalls-safety-alerts-research-summary.html
+++ b/draft-research/recalls-safety-alerts-research-summary.html
@@ -67,146 +67,110 @@ main p, main li, main blockquote {
 
 	<p>In October of 2019, the Treasury Board’s Digital Transformation Office (DTO) identified an opportunity to follow up on a previous optimization project from 2018: Health Canada’s recalls and safety alerts management system (RSAMS).</p>
 
-	<p>It also included GAC’s partners in delivering travel-related content:</p>
+	<p>In the first project, we had created a prototype search using the Canada.ca search engine. Results from that project validated many of the hypotheses that had informed the prototype’s design, but the search functionality was limited. This meant that the prototype couldn’t be deployed to the RSAMS environment that was in place at the time.</p>
 
-	<ul>
-		<li>Immigration, Refugees and Citizenship Canada (IRCC)</li>
-		<li>Public Health Agency of Canada (PHAC)</li>
-		<li>Health Canada (HC)</li>
-		<li>Canada Border Services Agency (CBSA)</li>
-	</ul>
+	<p>For this second project, the team was able to experiment with an open source search solution. We also added a search expert to the project team. The intent was to help Health Canada prepare for implementing search functionality in a new Drupal-based  RSAMS publishing infrastructure, to be launched in FY 2020-2021.</p>
+
+        <p>For the DTO, our goal was to learn more about delivering effective specialized search, so we could provide advice and guidance to other GC institutions offering similar search functionality to their users.</p>
 
 <h2>What made this project stand out</h2>
 
-<h3>Mobile access</h3>
-<p>Analytics told us that Canadians increasingly use their mobile devices to access travel information on Canada.ca. For this reason, both baseline and prototype testing focused on mobile use. Test participants either used their own device, or resized their desktop browser to simulate a mobile interface.</p>
+<h3>Search testbed</h3>
+<p>To help us experiment with features and options, we created a search testbed. We got the data for the testbed’s index using a combination of a database extraction (from RSAMS) and open data sets for vehicle recalls, published by Transport Canada on <a href="https://open.canada.ca/en">open.canada.ca</a>. The testbed allowed the project team to experiment with a range of options for configuring the search solution and interface. This included features such as facets and filters, refinement mechanisms and feedback, auto-suggestion (typeahead), query correction, highlighting, and more. Applying these features to real data was extremely helpful.</p>
 
-<h3>Communicating risks</h3>
-<p>Travelling has a degree of risk. Most travellers take routine precautions against familiar risks, like theft or injury. The Government of Canada can’t prevent Canadians from travelling, but has an obligation to protect them from harm. We inform Canadians when they should change their routine behaviour or avoid travel altogether to stay safe.  It’s critical that we design web pages that clearly and succinctly convey both the nature and the level of risk. To do this, the project team designed a new page template for destinations. The design prioritizes “must know” risks using a new alert pattern and a carefully curated short list of important points.</p>
+<h3>Optimization testing vs. product testing</h3>
+<p>When we started the project, we planned for one round of testing. We planned to reuse tasks and baseline data from the first project, and compare task performance to complete the study. Our optimization studies require a minimum of 16 performances of each task for reliable comparison.</p>
+
+<p>Implementing a full search solution within a constrained time frame is a complex task. We found ourselves implementing new features, updating the index, and making significant changes to the product as we tested. This was fantastic for learning and experimenting. It is exactly what should be done in a product development process. The drawback was that it meant we didn’t have our minimum of 16 task performances, so we couldn’t use the test data for comparison.</p>
 
 <h3>Encouraging people to look at both generic and destination-specific advice</h3>
 <p>There are many pages in the travel section of Canada.ca that provide general advice. This includes guidance on travel documents, travelling with children or pets, travel insurance and vaccinations. Often destination-specific pages duplicated this content. Testing uncovered a persistent challenge where people found general advice and assumed they had all the information they needed to make decisions about travelling. They were missing critical destination-specific advice. To address this we removed duplicate “generic” advice from destination-specific pages. We linked to it instead. We also grouped content differently on the navigation. We increased the visibility of topics such as “Planning your trip” and added a “Before you go” checklist. These changes helped people navigate more effectively between both types of advice.</p>
 
-<figure class="mrgn-tp-lg mrgn-bttm-lg">
-<img class="img-responsive border" alt="Travel advice redesign" src="../images/travel-advice/advice-design.png"/>
-<figcaption>Redesign of the travel advice page used in validation testing.</figcaption>
-</figure>
+<h2>Defining specialized search</h2>
 
-<h2>Establishing a baseline</h2>
+<p>Specialized search is different from web search. It focuses on queries of a specific structured database, or a collection of related content, which may include both structured and unstructured content sources.</p>
+	
+<p>Unlike web search, all components of the search system should be within the control — or at least the influence — of the product manager. To help institutions deliver and maintain an effective user experience, we wanted to define these various components and the skills and activities required to support them.</p>
+	
+<h2>Components of specialized search</h2>
 
-	<p>In the baseline study, 19 Canadian travellers performed 147 tests on the live Canada.ca travel pages. The overall success rate was 23%.</p>
-
-	<p>The most common problems participants encountered were:</p>
+	<p>A full search solution combines multiple components, each of which involves design decisions.</p>
 
 	<ul>
-		<li>not understanding the (sometimes subtle) differences between advice, advisories, and notices</li>
-		<li>not understanding the different levels or types of travel risk—safety, security, health—and their significance for travel planning</li>
-		<li>“satisficing” by answering the task question with information that seemed close enough to an answer, even if it was incomplete or incorrect</li>
-		<li>failing to find answers published under a heading where people didn’t think to look
-(for example, guidance about illegal medications placed under “Laws and culture” but not under “Health”)</li>
-	<li>headings that acted as “dirty magnets”—suggesting content that didn’t provide the answer
-(for example: “How we help,” leading to profiles of individual consular officers rather than details about the services provided to Canadian travellers)</li>
-	<li>long, dense pages of text that don’t support scanning, making it easy to miss crucial details</li>
-	<li>tasks requiring prior knowledge, such as knowing that London, England is in the United Kingdom</li>
+		<li>Content stores
+			<ul>
+			<li>Sources of structured content to be indexed and/or unstructured content to be crawled and indexed</li>
+			<li>Content/data structure, changes and improvements, such as adding summaries to aid scanning and comprehension, and creating fields to support facets and filters</li>
+			</ul>
+			</li>
+		<li>Content processing and indexing
+			<ul>
+			<li>Identifying what should be included or excluded from the search index</li>
+			<li>Functions such as tokenization, lemmatization, stemming, and stop words that can be configured in the search solution</li>
+			</ul>
+			</li>
+		<li>Query processing and search features
+			<ul>
+			<li>Constraining results by date or other criteria</li>
+			<li>Classification, faceting, auto-suggest, error correction (“did you mean?”), etc.</li>
+			</ul>
+			</li>
+		<li>Search interface design and results presentation
+			<ul>
+			<li>Snippets, sort order, refinement options, zero-result recovery, etc.</li>
+			</ul>
+			</li>
+		<li>Search analytics and performance measurement</li>
 	</ul>
 
+<h2>Supporting effective search</h2>
 
+<p>At the end of the project, we gave Health Canada recommendations for the new RSAMS search implementation.</p>
 
-<h2>Designing for user success</h2>
+<p>Our experience with the RSAMS project reinforced our understanding of the complexity of delivering effective specialized search. The key recommendations, summarized here, apply to any specialized search implementation.</p>
+	
+	<h4>Understand search use cases</h4>
+	
+	<p>It is important to look at the evidence of how people are using specialized search and design the solution to support this.</p>
 
-<p>Intensive workshops with the extended project team helped us to deliver a prototype with significant improvements.</p>
+	<p> For example, earlier research had shown that RSAMS search behaviour follows distinct patterns: </p>
+	<ul>
+		<li> searching by product (brand) or product category (toys, cars)</li>
+		<li> searching by health concern (specific allergies)</li>
+		<li> searching by issue (recalls due to food-borne listeria or E. Coli)</li>
+	</ul>
 
-<p>These included:</p>
+	<p> A shared understanding of these patterns can help determine how to structure your content. For example, the RSAMS data did not capture brand names or product codes as a separate field. That undermined precision in search results.</p>
+	
+	<h4>Fix the data at source, with the right people involved</h4>
+	
+	<p>For RSAMS, a significant area of challenge has been that the content is sourced from multiple groups and institutions. Each has its own processes, templates and formats for publishing recalls and other notices related to the specific products it is responsible for monitoring.</p>
+	
+	<p>For this project, we had a static dataset. That meant we could make manual additions and deletions to prepare a single, search-specific data source for indexing. Changes made to the data included:
 <ul>
-	<li>a revised travel information architecture, with fewer topics and more task-centered labels to improve information scent
-(for example, “Planning your trip” instead of “Travel abroad”)</li>
-	<li>a more consistent relationship between parent topic labels and their subtopics</li>
-	<li>a ”safety net” approach to content design
-(for example, information about illegal medications—which can lead to arrest and imprisonment in some countries—is highlighted as an “Important point” described in detail under “Laws and culture” and cross-referenced under “Health > Medications”)</li>
-	<li>scannable, easy-to-read pages about critical topics and common situations requiring assistance</li>
-	<li>plenty of headings, bulleted lists, and “on this page” navigation links</li>
-	<li>conversion of the extremely valuable travel checklist from a publication (often missed by participants) into a prominently-placed web page</li>
-	<li>a revised destination directory highlighting high-risk destinations
-(those with “do not travel” or “avoid non-essential travel” advisories) </li>
-	<li>a revised destination search function that supports search using alternate place names</li>
-	<li>a redesigned destination page template, replacing the multi-page tabbed design with a single page using “on this page” navigation links</li>
-	<li>destination-specific contact and service information placed more prominently on destination pages</li>
-</ul>
+	<li>separating multi-product notices into one-product-per-notice</li>
+	<li>revising the format for recall titles</li>
+	<li>making improvements to the RSAMS taxonomy, and applying updated values</li>
+	<li>excluding outdated and redundant records from the index</li>
+	</ul>
+	
+	<p>This “post-processing” of search data prior to indexing was labour-intensive. It was also difficult because of inconsistencies and issues with data quality.</p>
 
-<h2>Measuring success rates on the redesigned prototype</h2>
+<p>Ideally, these types of issues should be fixed at the source, rather than patched afterwards. Getting this right requires bringing together the people most knowledgeable about the data or content.</p>
+	
+	<h4>Dedicate resources to performance monitoring and data curation</h4>
+<p>Is your search effective? To answer this question, you need to define metrics for search performance and perform routine analytics.</p>
 
-<p>The team tested the redesigned prototype with a new set of 19 Canadian travellers. They performed 146 tests of the same task scenarios as in the baseline testing. Our target was either 80% success or an improvement of at least 20 points over the baseline score. The revised content and design improved findability rates from 49% to 88% (+39% pts). Overall task success rose from 23% to 72% (+49% pts).</p>
+<p>You need to continually monitor these metrics. They should drive improvements to the relevant search solution component.</p>
+	
+	<p>If your search solution aggregates data and content from multiple sources, data curation is essential. The publishing infrastructure (content management system) should enforce structural consistency, and impose constraints (as in the use of controlled vocabularies for tagging content). Content needs to be monitored for quality. This monitoring should, in turn, inform improvements to structure, guidance and shared assets (such as those controlled vocabularies).</p>
+	
+<h2>Search is never done</h2>
 
-<p>This chart shows a comparison of task success rates between the baseline and validation tests for all 38 participants.</p>
+<p>An effective search solution requires dedicated resources. It needs to involve multiple skill sets in its design and maintenance. This should include subject matter experts, information architects, content designers, developers, data and network specialists, search analysts, and user researchers.</p>
 
-<img class="img-responsive hidden-sm hidden-xs" alt="Comparing task completion success rates in baseline and validation testing." src="../images/travel-advice/travel-advice-task-success-chart.png"/>
+	<p>To quote our search expert: “Search is hard. Good search is harder.” </p>
 
-
-
-<div class="row col-md-9">
-<details>
-		 <summary>
-			Task completion success rates – table
-		 </summary>
-			 <div class="table-bravo">
-						 <table class="table table-bordered">
-
-			<thead><tr><th scope="col">Task</th>
-			<th scope="col">Baseline</th>
-			<th scope="col">Validation</th>
-
-		</tr></thead><tbody><tr><td>Idonesia + codeine</td>
-			<td>17%</td>
-			<td>53%</td>
-		</tr><tr><td>Malawi + advice</td>
-			<td>21%</td>
-			<td>84%</td>
-		</tr><tr><td>Spain + lost passport</td>
-			<td>37%</td>
-			<td>53%</td>
-		</tr><tr><td>Cuba + health insurance</td>
-			<td>16%</td>
-			<td>63%</td>
-			<tr><td>Cayman Islands + hurricanes</td>
-				<td>32%</td>
-				<td>78%</td>
-			</tr>
-		</tr><tr><td>Travel checklist</td>
-			<td>11%</td>
-			<td>100%</td>
-		</tr>
-		<tr><td>London appointment</td>
-			<td>12%</td>
-			<td>58%</td>
-		</tr>
-		<tr><td>Costa Rica + yellow fever</td>
-			<td>41%</td>
-			<td>71%</td>
-		</tr>
-		<tr><td>Cambodia + advisory</td>
-			<td>21%</td>
-			<td>37%</td>
-		</tr>
-
-		</tbody>
-	</table>
-</div>
-
-
-</details>
-
-</div>
-
-<div class="clearfix"></div>
-
-<h2>Key drivers of success</h2>
-
-<p>The features of the prototype that had the biggest impact on success rates were:</p>
-<ul>
-	<li>headings that are simple, informative and task-oriented: “Planning your trip,” “Before you go,” “When things go wrong”</li>
-	<li>a page design for destinations where critical information stands out, supporting details are relevant, and additional detail is linked to instead of duplicated</li>
-	<li>content pages that are scannable, with clear and plentiful headings, bulleted lists, and only essential links</li>
-</ul>
 <div class="clearfix"></div>
 <h2>Request the research</h2>
 
@@ -222,7 +186,7 @@ main p, main li, main blockquote {
 
 <ul>
 
-<li>Read our blog post: <a href="#">Content design tips from our Travel advice and advisories and Contact the CRA optimization projects</a></li>
+<li><a href="https://blog.canada.ca/research-summaries/recalls-research-summary.html">Project summary: Recalls and safety alerts</a> (Round 1)</li>
 <li>Read overviews of other <a href="https://blog.canada.ca/pages/project-overview.html#projects">projects with our partners</a></li>
 
 </ul>
