--- a/draft-research/electronic-procurement-research-summary.html
+++ b/draft-research/electronic-procurement-research-summary.html
@@ -165,7 +165,7 @@ main p, main li, main blockquote {
 <p>The features of the prototype that had the biggest impact on success rates were:</p>
 <ul>
 	<li>fewer words, clear labels, plain language</li>
-	<li>a streamlined search experience with fewer, clearer choices for narrowing results/li>
+	<li>a streamlined search experience with fewer, clearer choices for narrowing results</li>
 	<li>simplified, scannable tender notice details that answer key questions for determining relevance and eligibility</li>
 	<li>no PDFs</li>
 </ul>
