--- a/draft-research/electronic-procurement-research-summary.html
+++ b/draft-research/electronic-procurement-research-summary.html
@@ -96,9 +96,31 @@ main p, main li, main blockquote {
 	<h2>Designing for success</h2>
 	
 	<p>The CanadaBuys prototype was developed in Drupal. This was the first time the DTO team used Drupal instead of Github for prototyping. The advantage of Drupal is its WYSIWIG (what you see is what you get) interface. It allows more non-coders to contribute to content design and iteration.</p>
-	
-	
 
+<p>We developed the prototype design through a series of intensive collaborative workshops with PSPC procurement experts. This allowed us to have a prototype with several innovations including:</p>
+	
+	<h4> Streamlined search interface and tender display </h4>
+<p>The prototyped search experience used a single search box on its opening page. <p>
+	
+	<p>It then presented a simplified set of facet options for narrowing results.</p>
+	
+	<p>The options focused on considerations that would help suppliers to quickly eliminate irrelevant options.</p>
+	
+	<ul>
+		<li>What kind of opportunity is this? A request for proposal (RFP), or an invitation to qualify for a standing offer or supply arrangement?</li>
+		<li> Am I eligible to respond?</li>
+		<li> Does it match what I sell or provide?</li>
+		<li> When and where would the work need to be done?</li>
+                <li> What is the deadline for responding?</li>
+	</ul>
+	
+	<h4>Scannable opportunity summary display</h4>
+<p>In the prototype, tenders were formatted to provide essential details in a single, easy-to-scan format. They used the “on this page” pattern to aid navigation. Again, the focus was on making it easy for suppliers to determine: </p>
+<ul>
+	<li> what the buyer is looking for </li>
+	<li> what the evaluation criteria will be </li>
+	<li> how to find potential partners </li>
+	</ul>
 
 
 <figure class="mrgn-tp-lg mrgn-bttm-lg">
