--- a/draft-research/electronic-procurement-research-summary.html
+++ b/draft-research/electronic-procurement-research-summary.html
@@ -122,64 +122,27 @@ main p, main li, main blockquote {
 	<li> how to find potential partners </li>
 	</ul>
 
-
+	<h4>Long document pattern for RFPs, statements of work</h4>
+<p>Currently, most RFPs are published in PDF only. Businesses have to download the PDF before they can review or search within the document. The prototype experimented with a navigable HTML format for long documents. It used an interactive table of contents to allow people to easily access key sections like the statement of work.</p>
+	
+	<h4>Navigable hierarchy for product and service codes</h4>
+<p>The prototype used a simple keyword search to help businesses identify the UNSPSC or GSIN code for a specific product or service. Results showed the full hierarchy for context, and let users navigate through the tree.</p>
+	
+	<h4>A wizard to help suppliers identify their best “method of supply”</h4>
+<p>Knowing whether there is a supply arrangement that will allow your company to pre-qualify for government opportunities is one of the more complex aspects of learning how procurement works. The prototyped wizard made this easy. It asked simple questions and presented the best options for your good or service.</p>
+	
 <figure class="mrgn-tp-lg mrgn-bttm-lg">
 <img class="img-responsive border" alt="Travel advice redesign" src="../images/travel-advice/advice-design.png"/>
 <figcaption>Redesign of the travel advice page used in validation testing.</figcaption>
 </figure>
 
-<h2>Establishing a baseline</h2>
 
-	<p>In the baseline study, 19 Canadian travellers performed 147 tests on the live Canada.ca travel pages. The overall success rate was 23%.</p>
+<h2>Measuring success rates on the CanadaBuys prototype</h2>
 
-	<p>The most common problems participants encountered were:</p>
-
-	<ul>
-		<li>not understanding the (sometimes subtle) differences between advice, advisories, and notices</li>
-		<li>not understanding the different levels or types of travel risk—safety, security, health—and their significance for travel planning</li>
-		<li>“satisficing” by answering the task question with information that seemed close enough to an answer, even if it was incomplete or incorrect</li>
-		<li>failing to find answers published under a heading where people didn’t think to look
-(for example, guidance about illegal medications placed under “Laws and culture” but not under “Health”)</li>
-	<li>headings that acted as “dirty magnets”—suggesting content that didn’t provide the answer
-(for example: “How we help,” leading to profiles of individual consular officers rather than details about the services provided to Canadian travellers)</li>
-	<li>long, dense pages of text that don’t support scanning, making it easy to miss crucial details</li>
-	<li>tasks requiring prior knowledge, such as knowing that London, England is in the United Kingdom</li>
-	</ul>
-
-
-
-<h2>Designing for user success</h2>
-
-<p>Intensive workshops with the extended project team helped us to deliver a prototype with significant improvements.</p>
-
-<p>These included:</p>
-<ul>
-	<li>a revised travel information architecture, with fewer topics and more task-centered labels to improve information scent
-(for example, “Planning your trip” instead of “Travel abroad”)</li>
-	<li>a more consistent relationship between parent topic labels and their subtopics</li>
-	<li>a ”safety net” approach to content design
-(for example, information about illegal medications—which can lead to arrest and imprisonment in some countries—is highlighted as an “Important point” described in detail under “Laws and culture” and cross-referenced under “Health > Medications”)</li>
-	<li>scannable, easy-to-read pages about critical topics and common situations requiring assistance</li>
-	<li>plenty of headings, bulleted lists, and “on this page” navigation links</li>
-	<li>conversion of the extremely valuable travel checklist from a publication (often missed by participants) into a prominently-placed web page</li>
-	<li>a revised destination directory highlighting high-risk destinations
-(those with “do not travel” or “avoid non-essential travel” advisories) </li>
-	<li>a revised destination search function that supports search using alternate place names</li>
-	<li>a redesigned destination page template, replacing the multi-page tabbed design with a single page using “on this page” navigation links</li>
-	<li>destination-specific contact and service information placed more prominently on destination pages</li>
-</ul>
-
-<h2>Measuring success rates on the redesigned prototype</h2>
-
-<p>The team tested the redesigned prototype with a new set of 19 Canadian travellers. They performed 146 tests of the same task scenarios as in the baseline testing. Our target was either 80% success or an improvement of at least 20 points over the baseline score. The revised content and design improved findability rates from 49% to 88% (+39% pts). Overall task success rose from 23% to 72% (+49% pts).</p>
-
-<p>This chart shows a comparison of task success rates between the baseline and validation tests for all 38 participants.</p>
+<p>This chart shows a comparison of task success rates between the baseline and validation tests for all 37 participants.</p>
 
 <img class="img-responsive hidden-sm hidden-xs" alt="Comparing task completion success rates in baseline and validation testing." src="../images/travel-advice/travel-advice-task-success-chart.png"/>
-
-
-
-
+	
 <div class="clearfix"></div>
 
 <h2>Key drivers of success</h2>
