--- a/draft-research/electronic-procurement-research-summary.html
+++ b/draft-research/electronic-procurement-research-summary.html
@@ -100,7 +100,11 @@ main p, main li, main blockquote {
 <p>We developed the prototype design through a series of intensive collaborative workshops with PSPC procurement experts. This allowed us to have a prototype with several innovations including:</p>
 	
 	<h4> Streamlined search interface and tender display </h4>
-<p>The prototyped search experience used a single search box on its opening page. <p>
+<p>The prototyped search experience used a single search box on its opening page. </p>
+	
+	<img class="img-responsive hidden-sm hidden-xs" alt="Heading text reads: CanadaBuys
+There is a search field entitled "Search active Government of Canada opportunities". Below the search field is a link to "Changes to procurement - what current suplliers need to know"." src="../images/CanadaBuys.PNG"/>
+
 	
 	<p>It then presented a simplified set of facet options for narrowing results.</p>
 	
