--- a/draft-research/electronic-procurement-research-summary.html
+++ b/draft-research/electronic-procurement-research-summary.html
@@ -104,9 +104,10 @@ main p, main li, main blockquote {
 	
 	<img class="img-responsive hidden-sm hidden-xs" alt="Heading text reads: CanadaBuys
 There is a search field entitled "Search active Government of Canada opportunities". Below the search field is a link to "Changes to procurement - what current suplliers need to know"." src="../images/CanadaBuys.PNG"/>
-
 	
 	<p>It then presented a simplified set of facet options for narrowing results.</p>
+	
+	<img class="img-responsive hidden-sm hidden-xs" alt="Facets listed in this order: Category and code, Location, Type of notice, Who can bid, Buyer" src="../images/Category.PNG"/>
 	
 	<p>The options focused on considerations that would help suppliers to quickly eliminate irrelevant options.</p>
 	
@@ -132,20 +133,18 @@ There is a search field entitled "Search active Government of Canada opportuniti
 	<h4>Navigable hierarchy for product and service codes</h4>
 <p>The prototype used a simple keyword search to help businesses identify the UNSPSC or GSIN code for a specific product or service. Results showed the full hierarchy for context, and let users navigate through the tree.</p>
 	
+	<img class="img-responsive hidden-sm hidden-xs" alt="Heading text reads: Internet or intranet client application development services. Below the UNSPSC code for this type of service is listed in bold text: 81111509. In a coloured box, the hierarchy for the code is shown: Category codes (UNSPSC), Services (Segments 70-94), Technology, research and engineering - 81000000, Computer services - 81110000, Software or hardware engineering - 81115000, ending in Internet or intranet client application development services - 81111509." src="../images/internet-hierarchy.PNG"/>
+	
 	<h4>A wizard to help suppliers identify their best “method of supply”</h4>
 <p>Knowing whether there is a supply arrangement that will allow your company to pre-qualify for government opportunities is one of the more complex aspects of learning how procurement works. The prototyped wizard made this easy. It asked simple questions and presented the best options for your good or service.</p>
 	
-<figure class="mrgn-tp-lg mrgn-bttm-lg">
-<img class="img-responsive border" alt="Travel advice redesign" src="../images/travel-advice/advice-design.png"/>
-<figcaption>Redesign of the travel advice page used in validation testing.</figcaption>
-</figure>
-
+<img class="img-responsive hidden-sm hidden-xs" alt="The heading text for the wizard reads: Find the best way to compete for government contracts. It explains: We may have a preferred or mandatory method of supply for procuring specific types of goods or services. This is followed by a simple question: What do you sell or provide? The listed options are: Raw materials, Industrial equipment, components and supplies, end-use products, and services. Below is a button labelled Continue." src="../images/Find-the-way.PNG"/>
 
 <h2>Measuring success rates on the CanadaBuys prototype</h2>
 
 <p>This chart shows a comparison of task success rates between the baseline and validation tests for all 37 participants.</p>
 
-<img class="img-responsive hidden-sm hidden-xs" alt="Comparing task completion success rates in baseline and validation testing." src="../images/travel-advice/travel-advice-task-success-chart.png"/>
+<img class="img-responsive hidden-sm hidden-xs" alt="Include table that supports this graph" src="../images/EPS-Graph.PNG"/>
 	
 <div class="clearfix"></div>
 
