--- a/draft-research/electronic-procurement-research-summary.html
+++ b/draft-research/electronic-procurement-research-summary.html
@@ -146,6 +146,62 @@ There is a search field entitled "Search active Government of Canada opportuniti
 
 <img class="img-responsive hidden-sm hidden-xs" alt="Include table that supports this graph" src="../images/EPS-Graph.PNG"/>
 	
+<div class="row col-md-9">
+<details>
+		 <summary>
+			Task completion success rates – table
+		 </summary>
+			 <div class="table-bravo">
+						 <table class="table table-bordered">
+
+			<thead><tr><th scope="col">Task</th>
+			<th scope="col">Baseline</th>
+			<th scope="col">Validation</th>
+
+		</tr></thead><tbody><tr><td>Idonesia + codeine</td>
+			<td>17%</td>
+			<td>53%</td>
+		</tr><tr><td>Malawi + advice</td>
+			<td>21%</td>
+			<td>84%</td>
+		</tr><tr><td>Spain + lost passport</td>
+			<td>37%</td>
+			<td>53%</td>
+		</tr><tr><td>Cuba + health insurance</td>
+			<td>16%</td>
+			<td>63%</td>
+			<tr><td>Cayman Islands + hurricanes</td>
+				<td>32%</td>
+				<td>78%</td>
+			</tr>
+		</tr><tr><td>Travel checklist</td>
+			<td>11%</td>
+			<td>100%</td>
+		</tr>
+		<tr><td>London appointment</td>
+			<td>12%</td>
+			<td>58%</td>
+		</tr>
+		<tr><td>Costa Rica + yellow fever</td>
+			<td>41%</td>
+			<td>71%</td>
+		</tr>
+		<tr><td>Cambodia + advisory</td>
+			<td>21%</td>
+			<td>37%</td>
+		</tr>
+
+		</tbody>
+	</table>
+</div>
+
+
+</details>
+
+</div>
+
+<div class="clearfix"></div>
+	
 <div class="clearfix"></div>
 
 <h2>Key drivers of success</h2>
